--- a/notebooks/03_Data_Preprocessing.ipynb
+++ b/notebooks/03_Data_Preprocessing.ipynb
@@ -7,13 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c6c1eb79",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7badb4c6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "56588e51",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bdc30316",
    "metadata": {},
    "outputs": [],
@@ -54,12 +54,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "28c9abcf",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = pd.get_dummies(X, drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "236600c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/feature_names.pkl']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_names = X.columns\n",
+    "joblib.dump(feature_names, '../models/feature_names.pkl')\n"
    ]
   },
   {
@@ -130,36 +152,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "e64b6ac4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '..models/X_train_final.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjoblib\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mjoblib\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdump\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_final\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m..models/X_train_final.pkl\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m joblib.dump(X_test_scaled, \u001b[33m'\u001b[39m\u001b[33m..models/X_test_scaled.pkl\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m joblib.dump(y_train_final, \u001b[33m'\u001b[39m\u001b[33m..models/y_train_final.pkl\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32me:\\New folder (2)\\Customer_Churn_ML\\venv\\Lib\\site-packages\\joblib\\numpy_pickle.py:599\u001b[39m, in \u001b[36mdump\u001b[39m\u001b[34m(value, filename, compress, protocol)\u001b[39m\n\u001b[32m    597\u001b[39m         NumpyPickler(f, protocol=protocol).dump(value)\n\u001b[32m    598\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m is_filename:\n\u001b[32m--> \u001b[39m\u001b[32m599\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mwb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m    600\u001b[39m         NumpyPickler(f, protocol=protocol).dump(value)\n\u001b[32m    601\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '..models/X_train_final.pkl'"
-     ]
+     "data": {
+      "text/plain": [
+       "['../models/scaler.pkl']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import joblib\n",
-    "\n",
-    "joblib.dump(X_train_final, '..models/X_train_final.pkl')\n",
-    "joblib.dump(X_test_scaled, '..models/X_test_scaled.pkl')\n",
-    "joblib.dump(y_train_final, '..models/y_train_final.pkl')\n",
-    "joblib.dump(y_test, '..models/y_test.pkl')\n",
-    "joblib.dump(scaler, '..models/scaler.pkl')"
+    "joblib.dump(X_train_final, '../models/X_train_final.pkl')\n",
+    "joblib.dump(X_test_scaled, '../models/X_test_scaled.pkl')\n",
+    "joblib.dump(y_train_final, '../models/y_train_final.pkl')\n",
+    "joblib.dump(y_test, '../models/y_test.pkl')\n",
+    "joblib.dump(scaler, '../models/scaler.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "d233c8e8",
    "metadata": {},
    "outputs": [
@@ -169,7 +187,7 @@
        "'e:\\\\New folder (2)\\\\Customer_Churn_ML\\\\notebooks'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "a31c2bc1",
    "metadata": {},
    "outputs": [
@@ -198,7 +216,7 @@
        " 'venv']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "6c638ba7",
    "metadata": {},
    "outputs": [
@@ -219,7 +237,7 @@
        "['../models/scaler.pkl']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,14 +254,6 @@
     "joblib.dump(y_test, '../models/y_test.pkl')\n",
     "joblib.dump(scaler, '../models/scaler.pkl')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18b8f845",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
